--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
           php-version: "8.0"
       - uses: actions/checkout@v3
       - name: remove .env
-        run: php -r "unlink('.env')"
+        run: php -r "unlink('.env');"
       - name: rename .env
-        run: php -r "copy('.env.prod', '.env');"
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Generate key
