--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
 APP_NAME=xpertgroupbd
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:Vm8Y6vM60XMhcK0dvwaTmSHPJTayp2080cTa50wAj+o=
-APP_DEBUG=false
-APP_URL=https://www.xpertgroupbd.com
+APP_DEBUG=flase
+APP_URL=http://xpertgroupbd.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=xpertgro_db
-DB_USERNAME=rootxpertgro_admin
-DB_PASSWORD=Q-(O=-1{ltfQ
+DB_USERNAME=xpertgro_admin
+DB_PASSWORD=m{gi5H.R?26=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -36,13 +36,13 @@ MAIL_USERNAME=820fe9231a8571
 MAIL_PASSWORD=22a1762efe290c
 MAIL_ENCRYPTION=tls
 
-MAIL_MAILER=smtp
-MAIL_HOST=mail.xpertgroupbd.com
-MAIL_PORT=587
-MAIL_USERNAME=office@xpertgroupbd.com
-MAIL_PASSWORD=Eli@s4228
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=office@xpertgroupbd.com
+#MAIL_MAILER=smtp
+#MAIL_HOST=mailhog
+#MAIL_PORT=1025
+#MAIL_USERNAME=null
+#MAIL_PASSWORD=null
+#MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=appmail@mail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
