--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/f/assets/bundle/app.js": "/f/assets/bundle/app.js",
     "/f/assets/bundle/styles.css": "/f/assets/bundle/styles.css",
+    "/f/assets/bundle/mail.css": "/f/assets/bundle/mail.css",
     "/f/assets/bundle/libs.css": "/f/assets/bundle/libs.css",
     "/f/assets/bundle/libs.js": "/f/assets/bundle/libs.js"
 }
