--- a/.env.local
+++ b/.env.local
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=xpertgro_db
-DB_USERNAME=xpertgro_admin
-DB_PASSWORD=m{gi5H.R?26=
+DB_DATABASE=consult
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,7 +42,7 @@ MAIL_ENCRYPTION=tls
 #MAIL_USERNAME=null
 #MAIL_PASSWORD=null
 #MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=appmail@mail.com
+# MAIL_FROM_ADDRESS=appmail@mail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
